apps/pic/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pic
  namespace: pic
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: pic
