apps/pic/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pic
  namespace: pic
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: pic.phthalates-info-center.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pic
            port:
              number: 3000
